# gostore

./: .gitignore  README.md  pyproject.toml
app/api/v1/routes/: users.py
app/db/: database.py
app/db/schemas/: items.py  users.py
app/models/: categories.py
app/routers/: items.py  stores.py  users.py
store-api/: requirements.txt  run.sh  start.sh
store-api/app/: main.py
store-api/app/db/models/: items.py  reviews.py  stores.py  users.py
store-api/app/db/schemas/: stores.py
test/: db.py  main.py  models.py  schemas.py
