[tool.poetry]
name = "gostore"
version = "0.1.0"
description = "a online store application"
authors = ["Ravi Bharti <ravics1718@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.40"
python-dotenv = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.3"
pydantic = "^1.9.2"
fastapi-restful = "^0.4.3"


[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
